--- a/src/app/pages/connect/groupchat/groupchat.page.html
+++ b/src/app/pages/connect/groupchat/groupchat.page.html
@@ -536,8 +536,8 @@
   </ion-toolbar>
   <ion-toolbar id="expandable" *ngIf="moreOptions" class="ion-no-padding">
     <div class="moreoptions">
-      <swiper-container class="program-slides" [slidesPerView]="'auto'" [grabCursor]="true" [updateOnWindowResize]="true">
-        <swiper-slide class="program-slide" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : 20; index as i; trackBy: customTrackBy" [hidden]="!((calendarItem.relationship ? (calendarItem.relationship === chatService.currentChatProps[this.propIndex].moment?._id) : true) && calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && calendarItem.moment.resource['en-US'].value[0] !== 'Onboarding Process')">
+      <swiper class="program-slides" [slidesPerView]="'auto'" [grabCursor]="true" [updateOnWindowResize]="true">
+        <ng-template swiperSlide class="program-slide" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : 20; index as i; trackBy: customTrackBy">
           <ion-card class="program-card" (click)="selectCalendarItem($event, calendarItem)" *ngIf="calendarItem.moment">
             <ion-card-header class="ion-no-padding">
               <div class="program-photo-container">
@@ -547,8 +547,8 @@
             <div class="program-type"><ion-badge color="button1">{{calendarItem.moment.resource['en-US'].value[0]}}</ion-badge></div>
             <div class="program-name light">{{calendarItem.title}}</div>
           </ion-card>
-        </swiper-slide>
-        <swiper-slide class="program-slide">
+        </ng-template>
+        <ng-template swiperSlide class="program-slide">
           <ion-card class="program-card" (click)="openPickFeature()">
             <ion-card-header class="ion-no-padding" color="lightgrey">
               <ion-row class="program-photo-container ion-justify-content-center ion-align-items-center">
@@ -557,8 +557,8 @@
             </ion-card-header>
             <div class="program-name dark">More</div>
           </ion-card>
-        </swiper-slide>
-      </swiper-container>
+        </ng-template>
+      </swiper>
     </div>
   </ion-toolbar>
 </ion-footer>
